--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,22 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
+}
+section#redes-sociais {
+    text-align: right;
+}
+section#redes-sociais img {
+    width: 55px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.450);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover {
+    border: 3px solid rgba(255, 255, 255, 0.715);
+    transform: translate(-4px, -4px);
+    box-shadow: 7px 7px 11px rgba(0, 0, 0, 0.775);
+    transition: transform 0.6s, border 0.3s;
 }
